Arreglado bug de overflow en seccion 8. Agregados hipervinculos genericos en seccion 8

--- a/TP4/EntregaFinal/css/kids.css
+++ b/TP4/EntregaFinal/css/kids.css
@@ -835,8 +835,13 @@ header {
     margin-top: 274px;
     height:1296px;
     background: linear-gradient(180deg, #fff, #edfdff 17.5%, #adf8fd 56%, #e0d299);
+    overflow-x:clip;
 
+}
 
+#sec8 a, footer p a{
+    position: relative;
+    text-decoration: underline;
 }
 
 #sec8-hills{
